# star_map_generator

./: .gitignore  Cargo.toml  make.toml  smg.code-workspace
src/: generate.rs  lib.rs  options.rs  star_map_c.rs  tests.rs
src/tests/: generate.rs  options.rs
star_map_generator_extern/: Cargo.toml  copy_it_desktop.bat  copy_it_desktop_release.bat  copy_it_laptop.bat
star_map_generator_extern/src/: ffi_result.rs  lib.rs
