[package]
name = "star_map_generator_extern"
version = "0.1.0"
authors = ["Sibz <12050358+Sibz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="__star_gen_c"
crate-type = ["cdylib"]


[dependencies]
star_map_generator = { path = "../" }
libc="0.2.76"